// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policies directive Both policies approved 1`] = `
Object {
  "pd_bar": "FOO",
  "pd_foo": "FOO",
}
`;

exports[`Policies directive Both policies rejected 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policies: isAlpha (auth_policies), isBeta (auth_policies)",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "pd_foo"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policies directive First policy rejected 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policies: isAlpha (auth_policies)",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "pd_bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policies directive Second policy rejected 1`] = `
{
  "errors": [
    {
      "message": "Unauthorized by policies: isBeta (auth_policies)",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "pd_bar"
      ]
    }
  ],
  "data": {}
}
`;
